--- a/Signature_Share/src/main/AndroidManifest.xml
+++ b/Signature_Share/src/main/AndroidManifest.xml
@@ -5,11 +5,10 @@
 	android:installLocation="auto"
 	>
 
-    <!-- TODO: once Signature Capture creates output folder (if missing)
-            replace this permission with READ_EXTERNAL_STORAGE
-    -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
+    <queries>
+        <package android:name="biz.binarysolutions.signature" />
+    </queries>
+
     <supports-screens
         android:xlargeScreens="true"
         android:largeScreens="true"
